@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Keep track of monster knowledge.
+Nicolas Weeger 2010-02-07
+
 Tweak knowledge functions, preparing for additional items.
 Nicolas Weeger 2010-02-07
 
